--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.7.1'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id "org.sonarqube" version "3.4.0.2513"
 }
 
 group = 'com.example'
@@ -19,4 +20,12 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "test-for-sonar-cloud_sonar-java"
+        property "sonar.organization", "test-for-sonar-cloud-1"
+        property "sonar.host.url", "https://sonarcloud.io"
+    }
 }
